--- a/Task #1/index.html
+++ b/Task #1/index.html
@@ -154,7 +154,7 @@
 						<div class="shadowOn">
 							<input type="submit" class="enroll" value="Enroll Now">
 						</div>
-						<img src="img/home/fed.jpeg">
+						<img src="img/home/fed.jpeg" alt="front end developer course">
 						<p>Front-End-Developer</p>
 						<hr>
 						<p>Discount <span>50%</span></p>
@@ -165,7 +165,7 @@
 							<input type="submit" class="enroll" value="Enroll Now">
 						</div>
 						<div class="figure_img">
-							<img src="img/home/bed.jpg">
+							<img src="img/home/bed.jpg" alt="back end developer course">
 							<p> Back-End-Developer</p>
 							<hr>
 							<p>Discount <span>50%</span></p>
@@ -177,7 +177,7 @@
 							<input type="submit" class="enroll" value="Enroll Now">
 						</div>
 						<div class="figure_img">
-							<img src="img/home/fsd.png">
+							<img src="img/home/fsd.png" alt="full stack developer course">
 							<p> Full-Stack-Developer</p>
 							<hr>
 							<p>Discount <span>50%</span></p>
@@ -189,7 +189,7 @@
 							<input type="submit" class="enroll" value="Enroll Now">
 						</div>
 						<div class="figure_img">
-							<img src="img/home/e-commerce.jpg">
+							<img src="img/home/e-commerce.jpg" alt="E-Commerce course">
 							<p>E-Commerce</p>
 							<hr>
 							<p>Discount <span>50%</span></p>
@@ -201,7 +201,7 @@
 							<input type="submit" class="enroll" value="Enroll Now">
 						</div>
 						<div class="figure_img">
-							<img src="img/home/consultant.jpg">
+							<img src="img/home/consultant.jpg" alt="Web Developer Consultants">
 							<p>Web Developer Consultants</p>
 							<hr>
 							<p>Discount <span>50%</span></p>
@@ -213,7 +213,7 @@
 							<input type="submit" class="enroll" value="Enroll Now">
 						</div>
 						<div class="figure_img">
-							<img src="img/home/seo.jpg">
+							<img src="img/home/seo.jpg" alt="SEO Expert">
 							<p> SEO Expert</p>
 							<hr>
 							<p>Discount <span>50%</span></p>
@@ -233,7 +233,7 @@
 				</div>
 				<div class="students left">
 					<div class="img_name">
-						<img class="left" src="img/home/student_1.jpg">
+						<img class="left" src="img/home/student_1.jpg" alt="Martínez">
 						<h2>Martínez</h2>
 					</div>
 					<div class="para clear">
@@ -244,7 +244,7 @@
 				</div>
 				<div class="students left">
 					<div class="img_name ">
-						<img class="left" src="img/home/student_2.jpg">
+						<img class="left" src="img/home/student_2.jpg" alt="Jose Sebastian">
 						<h2>Jose Sebastian</h2>
 					</div>
 					<div class="para clear">
@@ -255,7 +255,7 @@
 				</div>
 				<div class="students left">
 					<div class="img_name">
-						<img  class="left" src="img/home/student_3.jpg">
+						<img  class="left" src="img/home/student_3.jpg" alt="Christina Hansen">
 						<h2>Christina Hansen</h2>
 					</div>
 					<div class="para clear">
