--- a/Task #1/services.html
+++ b/Task #1/services.html
@@ -107,12 +107,12 @@
 				</div>
 				<div class="col left">
 					<div class="box noshadow">
-						<img class="left" src="img/services/img_1.png">
-						<img class="left position" src="img/services/img_2.png">
+						<img class="left" src="img/services/img_1.png" alt="decoration image">
+						<img class="left position" src="img/services/img_2.png" alt="decoration image">
 					</div>
 					<div class="box noshadow">
-						<img class="left" src="img/services/img_1_1.png">
-						<img class="left position" src="img/services/img_2_2.png">
+						<img class="left" src="img/services/img_1_1.png" alt="decoration image">
+						<img class="left position" src="img/services/img_2_2.png" alt="decoration image">
 					</div>
 				</div>
 				<div class="col left">
