--- a/Task #1/categories.html
+++ b/Task #1/categories.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>TeachMe.com | Portofolio</title>
+		<title>TeachMe.com |  Categories</title>
 
 		<!-- meta tags -->
 		<meta charset="UTF-8">
-		<meta name="title" content="TeachMe.com | Portofolio">
+		<meta name="title" content="TeachMe.com |  Categories">
 		<meta name="description" content="TeachMe is an online learning and teaching marketplace with over 100 courses and 24 thousand students. Learn programming, Web consultants, SEO Expert, E-Commerce and more.">
 		<meta name="keywords" content="HTML,HTML5,CSS,CSS3,,SASS,LASS,Bootstrap,JavaScript,JQuery,React,Node,SQL,MySQL,PHP,Wordpress,Laravel, E-Commerce, SEO, Front end developer,Back end developer, Full stack developer, web developer consultants">
 		<meta name="author" content="Ahmad Al-Sawalqeh">
@@ -107,7 +107,7 @@
 						</div>
 						<div class="figure_img">
 							<figure>
-								<img src="img/categories/html.jpg">
+								<img src="img/categories/html.jpg" alt="HTML course">
 							</figure>
 						</div>
 					</div>
@@ -118,7 +118,7 @@
 						</div>
 						<div class="figure_img">
 							<figure>
-								<img src="img/categories/sass.jpg">
+								<img src="img/categories/sass.jpg" alt="SASS course">
 							</figure>
 						</div>
 					</div>
@@ -129,7 +129,7 @@
 						</div>
 						<div class="figure_img">
 							<figure>
-								<img src="img/categories/react.jpg">
+								<img src="img/categories/react.jpg" alt="React course">
 							</figure>
 						</div>
 					</div>
@@ -140,7 +140,7 @@
 						</div>
 						<div class="figure_img">
 							<figure>
-								<img src="img/categories/php.jpg">
+								<img src="img/categories/php.jpg" alt="PHP course">
 							</figure>
 						</div>
 					</div>
@@ -153,7 +153,7 @@
 						</div>
 						<div class="figure_img">
 							<figure>
-								<img src="img/categories/html5.jpg">
+								<img src="img/categories/html5.jpg" alt="HTML5 course">
 							</figure>
 						</div>
 					</div>
@@ -164,7 +164,7 @@
 						</div>
 						<div class="figure_img">
 							<figure>
-								<img src="img/categories/bs.jpg">
+								<img src="img/categories/bs.jpg"  alt="Bootstrap 4 course">
 							</figure>
 						</div>
 					</div>
@@ -175,7 +175,7 @@
 						</div>
 						<div class="figure_img">
 							<figure>
-								<img src="img/categories/node.jpg">
+								<img src="img/categories/node.jpg" alt="Node course">
 							</figure>
 						</div>					
 					</div>
@@ -186,7 +186,7 @@
 						</div>
 						<div class="figure_img">
 							<figure>
-								<img src="img/categories/laravel.jpg">
+								<img src="img/categories/laravel.jpg" alt="Laravel course">
 							</figure>
 						</div>					
 					</div>
@@ -197,7 +197,7 @@
 						</div>
 						<div class="figure_img">
 							<figure>
-								<img src="img/categories/seo.jpg">
+								<img src="img/categories/seo.jpg" alt="SEO course">
 							</figure>
 						</div>					
 					</div>
@@ -210,7 +210,7 @@
 						</div>
 						<div class="figure_img">
 							<figure>
-								<img src="img/categories/css.jpg">
+								<img src="img/categories/css.jpg"  alt="CSS course">
 							</figure>
 						</div>					
 					</div>
@@ -221,7 +221,7 @@
 						</div>
 						<div class="figure_img">
 							<figure>
-								<img src="img/categories/javascript.jpg">
+								<img src="img/categories/javascript.jpg" alt="JavaScript course">
 							</figure>
 						</div>			
 					</div>
@@ -232,7 +232,7 @@
 						</div>
 						<div class="figure_img">
 							<figure>
-								<img src="img/categories/sql.jpg">
+								<img src="img/categories/sql.jpg" alt="SQL course">
 							</figure>
 						</div>					
 					</div>
@@ -243,7 +243,7 @@
 						</div>
 						<div class="figure_img">
 							<figure>
-								<img src="img/categories/wp.jpg">
+								<img src="img/categories/wp.jpg" alt="Wordpress course">
 							</figure>
 						</div>				
 					</div>					
@@ -256,7 +256,7 @@
 						</div>
 						<div class="figure_img">
 							<figure>
-								<img src="img/categories/css3.jpg">
+								<img src="img/categories/css3.jpg" alt="CSS3 course">
 							</figure>
 						</div>
 					</div>
@@ -267,7 +267,7 @@
 						</div>
 						<div class="figure_img">
 							<figure>
-								<img src="img/categories/jq.jpg">
+								<img src="img/categories/jq.jpg"  alt="JQuery course">
 							</figure>
 						</div>
 					</div>
@@ -278,7 +278,7 @@
 						</div>
 						<div class="figure_img">
 							<figure>
-								<img src="img/categories/mysql.jpg">
+								<img src="img/categories/mysql.jpg"  alt="MySql course">
 							</figure>
 						</div>
 					</div>
@@ -289,7 +289,7 @@
 						</div>
 						<div class="figure_img">
 							<figure>
-								<img src="img/categories/js_dom.png">
+								<img src="img/categories/js_dom.png" alt="JavaScript DOM course">
 							</figure>
 						</div>
 					</div>
@@ -300,7 +300,7 @@
 						</div>
 						<div class="figure_img">
 							<figure>
-								<img src="img/categories/e-com.jpg">
+								<img src="img/categories/e-com.jpg"  alt="E-Commeres course">
 							</figure>
 						</div>
 					</div>
