--- a/Task #1/contact.html
+++ b/Task #1/contact.html
@@ -96,7 +96,7 @@
 				<div class="teacher left">
 					<div class="img_name">
 						<h2>Jess Stratton</h2>						
-						<img src="img/contact/teacher_0.jpg">
+						<img src="img/contact/teacher_0.jpg"  alt="Jess Stratton">
 						<p>Front end developer Instructor</p>
 					</div>
 					<div class="para clear">
@@ -108,7 +108,7 @@
 				<div class="teacher left">
 					<div class="img_name">
 						<h2>Colt Steele</h2>
-						<img  src="img/contact/teacher_2.jpg">
+						<img  src="img/contact/teacher_2.jpg" alt="Colt Steele">
 						<p>Developer and Bootcamp Instructor</p>	
 					</div>
 					<div class="para no_padding clear">
@@ -120,7 +120,7 @@
 				<div class="teacher left">
 					<div class="img_name ">
 						<h2>Stephen Grider</h2>
-						<img  src="img/contact/teacher_1.jpg">
+						<img  src="img/contact/teacher_1.jpg" alt="Stephen Grider">
 						<p>SEO Engineering Instructor</p>			
 					</div>
 					<div class="para clear">
@@ -132,7 +132,7 @@
 				<div class="teacher left">
 					<div class="img_name">
 						<h2>Jean Lurssen</h2>
-						<img  src="img/contact/teacher_3.jpg">						
+						<img  src="img/contact/teacher_3.jpg" alt="Jean Lurssen">						
 						<p>Full stack Developer Instructor</p>
 					</div>
 					<div class="para clear">
